Adding placeholder content for landing page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nicholas Cage Landing Page</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    <!-- TODO: Add header -->
+    <header>
+      <!-- TODO: Add navbar with clickable links -->
+      <nav>
+        <ul>
+          <li>Link 1</li>
+          <li>Link 2</li>
+          <li>Link 3</li>
+        </ul>
+      </nav>
+    </header>
+    <!-- TODO:  Add placeholder image -->
+    <main>
+      <section>
+        <img
+          src="https://www.placecage.com/g/500/250"
+          alt="Nicholas Cage Grayscale Photo"
+        />
+      </section>
+
+      <section>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas
+          inventore eos ipsa, numquam natus ex tenetur, dignissimos repellat
+          aperiam earum totam quos reiciendis sequi, voluptate itaque! Ea
+          laborum alias deserunt.
+        </p>
+      </section>
+    </main>
+    <!-- TODO: Add input form -->
+    <footer>
+      <p>The form attribute specifies the form an input element belongs to.</p>
+
+      <form action="/action_page.php" id="form1">
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname" /><br /><br />
+        <input type="submit" value="Submit" />
+      </form>
+    </footer>
   </body>
 </html>
