--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- TODO: Add header -->
-    <header>
+    <header class="backgroundtest">
       <!-- TODO: Add navbar with clickable links -->
       <nav>
         <ul>
@@ -21,29 +21,28 @@
     </header>
     <!-- TODO:  Add placeholder image -->
     <main>
-      <section>
-        <img
-          src="https://www.placecage.com/g/500/250"
-          alt="Nicholas Cage Grayscale Photo"
-        />
-      </section>
-
-      <section>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas
-          inventore eos ipsa, numquam natus ex tenetur, dignissimos repellat
-          aperiam earum totam quos reiciendis sequi, voluptate itaque! Ea
-          laborum alias deserunt.
-        </p>
-      </section>
+        <figure id="image">
+          <img src="https://www.placecage.com/g/500/250" alt="Nicholas Cage Grayscale Photo"/>
+          <figcaption>A lovely photo of Nicholas Cage in Con Air</figcaption>
+        </figure>
+        <section>
+          <h1>Overview</h1>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas
+            inventore eos ipsa, numquam natus ex tenetur, dignissimos repellat
+            aperiam earum totam quos reiciendis sequi, voluptate itaque! Ea
+            laborum alias deserunt.
+          </p>
+        </section>
     </main>
     <!-- TODO: Add input form -->
     <footer>
-      <p>The form attribute specifies the form an input element belongs to.</p>
-
+      <h2>Contact Me</h2>
       <form action="/action_page.php" id="form1">
-        <label for="fname">First name:</label>
-        <input type="text" id="fname" name="fname" /><br /><br />
+        <label for="fname">Name:</label>
+        <input type="text" id="fname" name="fname" />
+        <label for="femail">Email:</label>
+        <input type="text" id="femail" name="femail"/>
         <input type="submit" value="Submit" />
       </form>
     </footer>
