updated styling for the website and formatted the container section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <!-- TODO: Add header -->
-    <header class="backgroundtest">
+    <header>
+      <h1 id="logo">Nic Cage Fan</h1>
       <!-- TODO: Add navbar with clickable links -->
       <nav>
         <ul>
@@ -21,23 +22,25 @@
     </header>
     <!-- TODO:  Add placeholder image -->
     <main>
-        <figure id="image">
-          <img src="https://www.placecage.com/g/500/250" alt="Nicholas Cage Grayscale Photo"/>
-          <figcaption>A lovely photo of Nicholas Cage in Con Air</figcaption>
-        </figure>
-        <section>
-          <h1>Overview</h1>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas
-            inventore eos ipsa, numquam natus ex tenetur, dignissimos repellat
-            aperiam earum totam quos reiciendis sequi, voluptate itaque! Ea
-            laborum alias deserunt.
-          </p>
-        </section>
+      <section class="container">
+        <img src="https://www.placecage.com/g/500/250" alt="Nicholas Cage Grayscale Photo" id="image"/>
+        <figcaption>A photo of the amazing Nicholas Cage</figcaption>
+      </section>
+      <section id="align" class="container">
+        <h1>Overview</h1>
+        <p>
+          Nicolas Kim Coppola (born January 7, 1964),[2][3] known professionally as Nicolas Cage, is an American actor and filmmaker. Cage has been nominated for numerous major cinematic awards, and won an Academy Award, a Golden Globe, and Screen Actors Guild Award for his performance in Leaving Las Vegas (1995). He earned his second Academy Award nomination for his performance as Charlie and Donald Kaufman in Adaptation (2002). 
+        </p>
+        <h1>Favorite Quote</h1>
+        <p>
+          I am not a demon. I am a lizard, a shark, a heat-seeking panther. I want to be Bob Denver on acid playing the accordion.
+          - Nicholas Cage
+        </p>
+      </section>
     </main>
     <!-- TODO: Add input form -->
     <footer>
-      <h2>Contact Me</h2>
+      <h2 id="align" >Contact Me</h2>
       <form action="/action_page.php" id="form1">
         <label for="fname">Name:</label>
         <input type="text" id="fname" name="fname" />
